--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <nav class="top">
     <div>
       <div class="cloud">
-          <img  src="image1/cloud.svg" alt="">
+          <img  src="cloud.svg" alt="">
       </div>
       <div class="cloud2">
           
-       <img  src="image1/cloud.svg" alt="">    
+       <img  src="cloud.svg" alt="">    
   
       </div>
    
@@ -82,7 +82,7 @@
    using the latest technologies available.</strong> 
  </p>
  <h4 class="text3"> I can help</h4>
-  <img class="lapimage" src="image1/fruit1.svg" alt="">
+  <img class="lapimage" src="fruit1.svg" alt="">
  <p class="text4"><strong>
   i'm currently available for freelance work.
 </strong>
